# orra

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  update_examples.sh
.github/: dependabot.yml  release.yml
cli/: .gitignore  go.mod  go.sum  main.go
controlplane/: Dockerfile  Makefile  _env  app.go  app_test.go  cache.go  cache_test.go  cacheparams.go  compose.yaml  compworker.go  config.go  config_test.go  db.go  domain.go  domain_test.go  engine.go  failure.go  go.mod  go.sum  grounding.go  grounding_test.go  groundingstore.go  health.go  idempotency.go  llm.go  log.go  logger.go  logstore_test.go  main.go  middleware.go  orchestrate.go  orchestrate_test.go  orchestrationstore.go  orchestrationview.go  orchestrationview_test.go  pddl.go  pddl_test.go  plane.go  plane_test.go  projstore.go  (+10 more)
docs/: actions.md  advanced.md  cli.md  compensations.md  core.md  domain-examples.md  domain-examples.template.yaml  grounding-pddl.md  grounding.md  grounding.template.yaml  model-configuration.md  monitoring-with-webhooks.md  plan-caching.md  rapid-agent-app-devlopment.md  reset-control-plane.md  telemetry.md  what-is-agent.md
examples/: README.md
examples/crewai-ghostwriters/: README.md  _env  pyproject.toml
examples/crewai-ghostwriters/src/: editor.py  main.py  writer_crew.py
examples/echo-python/: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
examples/echo-python/.orra-data/: echo-service-orra-service-key.json
examples/echo-python/src/: config.py  main.py  schema.py
planengine/: .gitignore  Dockerfile  _env  actionvalid.go  actionvalid_test.go  app.go  app_test.go  cache.go  cache_test.go  cacheparams.go  compose.yaml  compworker.go  config.go  engine.go  engine_test.go  events.go  failedcomp.go  failedcompstore.go  failure.go  go.mod  go.sum  grounding.go  grounding_test.go  idempotency.go  incident.go  llm.go  log.go  logstore.go  main.go  middleware.go  orchestrate.go  orchestrate_test.go  orchestrationstore.go  orchestrationstore_test.go  pddl.go  (+17 more)
sdks-conformance/tests/python/: .gitignore  conftest.py  pyproject.toml  run.sh  test_utils.py
sdks-conformance/tests/python/tests/: test_conn_resilience.py  test_connection.py  test_echo.py  test_exactly_once.py  test_large_payload.py  test_svcreg.py
(+217 files in other folders)
