[tool.poetry]
name = "orra-echo-example"
version = "0.1.0"
description = "Example Echo service using Orra Python SDK"
authors = ["Orra Team"]
readme = "README.md"
packages = [
    { include = "src" }
]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
orra-sdk = "^0.2.1"
python-dotenv = "^1.0.0"
uvicorn = "^0.27.0"
fastapi = "^0.109.0"

[tool.pytest.ini_options]
pythonpath = ["src"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
